test/trivial/deitz/test_int_uint.good
test_int_uint.chpl:1: error: illegal use of '+' on operands of type int(64) and uint(64)
