test/trivial/deitz/test_int_uint.chpl
var x = 1, y = 1u, z = x + y;
writeln((x, y, z));
